fixed bugs on mobile size

--- a/src/style.css
+++ b/src/style.css
@@ -179,8 +179,8 @@ textarea {
 
 main {
   background-color: white;
-  padding: 40px 30px;
   display: flex;
+  padding: 40px 30px;
   flex-direction: column;
   align-items: center;
   height: calc(100vh - 80px);
@@ -191,6 +191,8 @@ main {
 .main__header-div {
   display: flex;
   gap: 20px;
+  max-width: 100%;
+  justify-content: center;
 }
 .main__header-div img {
   width: 40px;
@@ -455,6 +457,13 @@ main span {
     height: min-content;
     border-right: none;
     border-bottom: 1px solid black;
+  }
+  .main__header {
+    font-size: 25px;
+  }
+  .main__header-div img {
+    width: 25px;
+    height: 25px;
   }
   .modal {
     width: 90%;
